[project]
name = "talai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.0",
    "dotenv>=0.9.9",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "redis>=5.2.1",
    "scenedetect>=0.6.6",
]

[tool.pyright]
venvPath = "."
venv = ".venv"